<resources>
    <string name="app_name">Todo App</string>
    <string name="logo">Logo Todo App</string>
    <string name="labelApp">Welcome to Todo App</string>
    <string name="txNama">Nama</string>
    <string name="txPassword">Password</string>
    <string name="txBtSignin">SIGN IN</string>
    <string name="labelNew">Dont have an account ?</string>
    <string name="txRegister">Register</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="etEmail">Masukkan Email</string>
    <string name="ePassword">Masukkan Password</string>
    <string name="eRePassword">Masukkan Password</string>
    <string name="txBtRegister">REGISTER</string>
    <string name="labelRegister">Register</string>
    <string name="labelSelamat">Selamat Datang </string>
    <string name="mLogout">Logout</string>
    <string name="lTask">Task</string>
    <string name="lJenis">Jenis Task</string>
    <string name="lTimeTask">Time Task</string>
    <string name="eTask">Masukkan Task</string>
    <string name="eJenis">Masukkan Jenis Task</string>
    <string name="eTime">Masukkan Time Task</string>
    <string name="textTask">Isi dari Task</string>
    <string name="textJenis">Jenis dari Task</string>
    <string name="textTime">Time dari Task</string>

</resources>